syntax = "proto3";

package scenario3;

message Metric2 {
  string metricName = 1;
  double value = 2;
  string timestamp = 3;
  string host = 4;
  string region = 5;
}
